--- a/requirements.txt
+++ b/requirements.txt
@@ -37,9 +37,9 @@ matplotlib==3.10.1
 mdurl==0.1.2
 ml_dtypes==0.5.1
 namex==0.0.9
-networkx==3.4.0
+networkx>=2.8,<3.5
 numpy==2.1.3
-opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
 opt_einsum==3.4.0
 optree==0.15.0
 packaging==25.0
@@ -59,14 +59,14 @@ segmentation-models==1.0.1
 six==1.17.0
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
-tensorflow==2.12.0
+tensorflow==2.19.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==3.1.0
-tifffile==2025.6.11
+tifffile==2023.9.26
 typing_extensions==4.13.2
 urllib3==2.4.0
 Werkzeug==3.1.3
 wrapt==1.17.2
 gunicorn==21.2.0
-gdown>=4.7.1
+gdown==4.7.1
 
